fixing those jumping links and logo link to homepage

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -70,6 +70,10 @@ p a, .post-content a{
   }
 }
 
+a{
+  outline: none;
+}
+
 a:active {
   position: relative;
   top: 1px;
