--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -573,12 +573,17 @@ p a:hover, .post-content a:hover {
 }
 
 /* line 73, ../sass/base/_typography.scss */
+a {
+  outline: none;
+}
+
+/* line 77, ../sass/base/_typography.scss */
 a:active {
   position: relative;
   top: 1px;
 }
 
-/* line 78, ../sass/base/_typography.scss */
+/* line 82, ../sass/base/_typography.scss */
 a.button {
   background-color: #EE6C2E;
   padding: 11px 24px;
@@ -592,26 +597,26 @@ a.button:hover {
   background: #e15512;
 }
 
-/* line 82, ../sass/base/_typography.scss */
+/* line 86, ../sass/base/_typography.scss */
 .text p {
   font-size: 17px;
   line-height: 1.4em;
   padding-bottom: 20px;
 }
 
-/* line 87, ../sass/base/_typography.scss */
+/* line 91, ../sass/base/_typography.scss */
 .text h3 {
   padding-bottom: 10px;
 }
 
-/* line 91, ../sass/base/_typography.scss */
+/* line 95, ../sass/base/_typography.scss */
 p.meta {
   color: #B0B0B0;
   font-size: 16px;
   padding: 0;
 }
 
-/* line 97, ../sass/base/_typography.scss */
+/* line 101, ../sass/base/_typography.scss */
 a.read-more {
   font-size: 19px;
   text-decoration: none;
@@ -619,12 +624,12 @@ a.read-more {
   padding-bottom: 1px;
   border-bottom: 1px solid #EE6C2E;
 }
-/* line 103, ../sass/base/_typography.scss */
+/* line 107, ../sass/base/_typography.scss */
 a.read-more:hover {
   color: #EE6C2E;
 }
 
-/* line 108, ../sass/base/_typography.scss */
+/* line 112, ../sass/base/_typography.scss */
 .twitter-button {
   background-color: #ffffff;
   padding: 11px 24px;
@@ -651,7 +656,7 @@ a.read-more:hover {
   transform: translate(0, 1px);
 }
 
-/* line 112, ../sass/base/_typography.scss */
+/* line 116, ../sass/base/_typography.scss */
 a.previous {
   margin-right: 5px;
 }
@@ -1156,6 +1161,13 @@ section.recent-talks-section ul li .read-more {
   bottom: 45px;
 }
 
+/* line 93, ../sass/pages/_work.scss */
+section.recent-talks-section ul li a.read-more:active {
+  position: absolute;
+  top: inherit;
+  bottom: 44px;
+}
+
 /**
  * Navigation
  */
@@ -1189,25 +1201,37 @@ a.logo {
 a.logo span {
   font-weight: 500;
 }
+/* line 28, ../sass/components/_nav.scss */
+a.logo:active {
+  position: absolute;
+  left: 0;
+  top: 29px;
+}
 
-/* line 30, ../sass/components/_nav.scss */
+/* line 35, ../sass/components/_nav.scss */
 a.nav-twitter {
   color: #ffffff;
   position: absolute;
   right: 0;
 }
+/* line 39, ../sass/components/_nav.scss */
+a.nav-twitter:active {
+  position: absolute;
+  right: 0;
+  top: 29px;
+}
 
-/* line 36, ../sass/components/_nav.scss */
+/* line 46, ../sass/components/_nav.scss */
 nav ul, nav ul li, nav a {
   display: inline-block;
 }
 
-/* line 40, ../sass/components/_nav.scss */
+/* line 50, ../sass/components/_nav.scss */
 ul.homenav {
   position: absolute;
   left: 40%;
 }
-/* line 43, ../sass/components/_nav.scss */
+/* line 53, ../sass/components/_nav.scss */
 ul.homenav a {
   text-transform: uppercase;
   font-size: 17px;
@@ -1216,38 +1240,38 @@ ul.homenav a {
   padding: 0 13px;
 }
 
-/* line 52, ../sass/components/_nav.scss */
+/* line 62, ../sass/components/_nav.scss */
 nav a {
   color: #ffffff;
 }
-/* line 54, ../sass/components/_nav.scss */
+/* line 64, ../sass/components/_nav.scss */
 nav a:hover, nav a:active, nav a.active {
   color: #EE6C2E;
 }
 
-/* line 63, ../sass/components/_nav.scss */
+/* line 73, ../sass/components/_nav.scss */
 nav ul li a.email:hover:hover, a.hamburger:hover:hover {
   color: #ffffff;
   border: none;
 }
-/* line 67, ../sass/components/_nav.scss */
+/* line 77, ../sass/components/_nav.scss */
 nav ul li a.email:hover.active, a.hamburger:hover.active {
   border: none;
 }
 
-/* line 72, ../sass/components/_nav.scss */
+/* line 82, ../sass/components/_nav.scss */
 a.hamburger {
   display: none;
   float: right;
   padding: 25px 15px 0 0;
   color: #ffffff;
 }
-/* line 77, ../sass/components/_nav.scss */
+/* line 87, ../sass/components/_nav.scss */
 a.hamburger.active {
   border: none;
 }
 
-/* line 82, ../sass/components/_nav.scss */
+/* line 92, ../sass/components/_nav.scss */
 #mobile-menu {
   display: none;
   position: fixed;
@@ -1260,26 +1284,26 @@ a.hamburger.active {
   z-index: 1000;
 }
 
-/* line 94, ../sass/components/_nav.scss */
+/* line 104, ../sass/components/_nav.scss */
 .mobile-menu-relative {
   position: relative;
 }
 
-/* line 99, ../sass/components/_nav.scss */
+/* line 109, ../sass/components/_nav.scss */
 #mobile-menu ul {
   width: 100%;
 }
-/* line 101, ../sass/components/_nav.scss */
+/* line 111, ../sass/components/_nav.scss */
 #mobile-menu ul li {
   font-family: "semplicitapro", helvetica, arial, sans-serif;
   display: block;
   padding: 12px 0;
 }
-/* line 105, ../sass/components/_nav.scss */
+/* line 115, ../sass/components/_nav.scss */
 #mobile-menu ul li:first-child {
   padding-top: 50px;
 }
-/* line 108, ../sass/components/_nav.scss */
+/* line 118, ../sass/components/_nav.scss */
 #mobile-menu ul li a {
   display: block;
   text-align: left;
@@ -1288,22 +1312,22 @@ a.hamburger.active {
   margin: 0;
   text-decoration: none;
 }
-/* line 115, ../sass/components/_nav.scss */
+/* line 125, ../sass/components/_nav.scss */
 #mobile-menu ul li a:hover {
   border: none;
   color: #EE6C2E;
 }
-/* line 119, ../sass/components/_nav.scss */
+/* line 129, ../sass/components/_nav.scss */
 #mobile-menu ul li a.active {
   border: none;
 }
 
-/* line 127, ../sass/components/_nav.scss */
+/* line 137, ../sass/components/_nav.scss */
 a.close-menu {
   color: #ffffff;
 }
 
-/* line 131, ../sass/components/_nav.scss */
+/* line 141, ../sass/components/_nav.scss */
 li.close-icon {
   position: absolute;
   top: 4px;
